--- a/requirements.txt
+++ b/requirements.txt
@@ -19,13 +19,16 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+iniconfig==2.3.0
 Jinja2==3.1.6
 jose==1.0.0
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+packaging==25.0
 passlib==1.7.4
+pluggy==1.6.0
 psycopg2-binary==2.9.11
 pwdlib==0.3.0
 pycparser==2.23
@@ -34,6 +37,7 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 PyJWT==2.10.1
+pytest==9.0.2
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
