--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ pydantic_core==2.41.5
 Pygments==2.19.2
 PyJWT==2.10.1
 pytest==9.0.2
+pytest-html==4.1.1
+pytest-metadata==3.1.1
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
